--- a/template/src/index.css
+++ b/template/src/index.css
@@ -40,6 +40,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Make images fit in their parent elements horizontally */
+img {
+  max-width: 100%;
+}
+
 /* Set monospace font for <code> elements */
 code {
   font-family:
