--- a/template/src/index.css
+++ b/template/src/index.css
@@ -45,6 +45,14 @@ img {
   max-width: 100%;
 }
 
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
 /* Set monospace font for <code> elements */
 code {
   font-family:
