--- a/template/src/components/app/app.css
+++ b/template/src/components/app/app.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.header {
+.content {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -11,4 +11,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.content p {
+  margin-bottom: 1em;
 }
